force-app/main/default/objects/Account/fields/Agr_AdhesionVersion__c.field-meta.xml
<CustomField>
    <fullName>Agr_AdhesionVersion__c</fullName>
    <label>Versão de Adesão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIMPLIFICADA</fullName>
            </value>
            <value>
                <fullName>FACILITADA</fullName>
            </value>
            <value>
                <fullName>PORTAL ÁGORA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>