force-app/main/default/objects/Account/fields/Agr_BillingAddressIsMailing__c.field-meta.xml
<CustomField>
    <fullName>Agr_BillingAddressIsMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End.comercial é o de correspondência?</label>
    <type>Checkbox</type>
</CustomField>