force-app/main/default/objects/Account/fields/Agr_BillingDistrict__c.field-meta.xml
<CustomField>
    <fullName>Agr_BillingDistrict__c</fullName>
    <label>Bairro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>