force-app/main/default/objects/Account/fields/Agr_BradescoManager__c.field-meta.xml
<CustomField>
    <fullName>Agr_BradescoManager__c</fullName>
    <label>Gerente Bradesco</label>
    <length>200</length>
    <type>Text</type>
</CustomField>