force-app/main/default/objects/Account/fields/Agr_BradescoOfficePlatform__c.field-meta.xml
<CustomField>
    <fullName>Agr_BradescoOfficePlatform__c</fullName>
    <label>Escritório / Plataforma</label>
    <length>200</length>
    <type>Text</type>
</CustomField>