force-app/main/default/objects/Account/fields/Agr_BradescoSegment__c.field-meta.xml
<CustomField>
    <fullName>Agr_BradescoSegment__c</fullName>
    <label>Segmento Final</label>
    <length>200</length>
    <type>Text</type>
</CustomField>