force-app/main/default/objects/Account/fields/Agr_CityOfBirth__c.field-meta.xml
<CustomField>
    <fullName>Agr_CityOfBirth__c</fullName>
    <label>Cidade de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>