force-app/main/default/objects/Account/fields/Agr_ComercialMobile1__c.field-meta.xml
<CustomField>
    <fullName>Agr_ComercialMobile1__c</fullName>
    <label>End.comercial Celular 1</label>
    <type>Phone</type>
</CustomField>