force-app/main/default/objects/Account/fields/Agr_ComercialMobile2__c.field-meta.xml
<CustomField>
    <fullName>Agr_ComercialMobile2__c</fullName>
    <label>End.comercial Celular 2</label>
    <type>Phone</type>
</CustomField>