force-app/main/default/objects/Account/fields/Agr_CountryOfBirth__c.field-meta.xml
<CustomField>
    <fullName>Agr_CountryOfBirth__c</fullName>
    <label>País de nascimento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>