force-app/main/default/objects/Account/fields/Agr_DocumentationStatus__c.field-meta.xml
<CustomField>
    <fullName>Agr_DocumentationStatus__c</fullName>
    <label>Status Rocket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-B3 APROVADO</fullName>
            </value>
            <value>
                <fullName>2-B3 REPROVADO</fullName>
            </value>
            <value>
                <fullName>3-REST APROVADO</fullName>
            </value>
            <value>
                <fullName>4-REST REPROVADO</fullName>
            </value>
            <value>
                <fullName>5-ROCKET APROVADO</fullName>
            </value>
            <value>
                <fullName>6-ROCKET VALIDACAO</fullName>
            </value>
            <value>
                <fullName>7-ROCKET REPROVADO</fullName>
            </value>
            <value>
                <fullName>8-PENDENTE DOCTO</fullName>
            </value>
            <value>
                <fullName>9-DOCUMENTACAO ANALISE</fullName>
            </value>
            <value>
                <fullName>11-APROVACAO MANUAL</fullName>
            </value>
            <value>
                <fullName>12-MESA 2</fullName>
            </value>
            <value>
                <fullName>13-MESA 4</fullName>
            </value>
            <value>
                <fullName>30-MESA 6 - BLACKLIST</fullName>
            </value>
            <value>
                <fullName>31-REST APROVADO MANUAL</fullName>
            </value>
            <value>
                <fullName>99-CADASTRANDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>