force-app/main/default/objects/Account/fields/Agr_EmployerCNPJ__c.field-meta.xml
<CustomField>
    <fullName>Agr_EmployerCNPJ__c</fullName>
    <label>CPNJ Empresa</label>
    <length>18</length>
    <type>Text</type>
</CustomField>