force-app/main/default/objects/Account/fields/Agr_FatherName__c.field-meta.xml
<CustomField>
    <fullName>Agr_FatherName__c</fullName>
    <label>Nome do pai</label>
    <length>60</length>
    <type>Text</type>
</CustomField>