force-app/main/default/objects/Account/fields/Agr_FinancialActivation__c.field-meta.xml
<CustomField>
    <fullName>Agr_FinancialActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativado?</label>
    <type>Checkbox</type>
</CustomField>