force-app/main/default/objects/Account/fields/Agr_GoogleAnalytics__c.field-meta.xml
<CustomField>
    <fullName>Agr_GoogleAnalytics__c</fullName>
    <label>Código Google Analytics</label>
    <length>32</length>
    <type>Text</type>
</CustomField>