force-app/main/default/objects/Account/fields/Agr_HasPermanentVisa__c.field-meta.xml
<CustomField>
    <fullName>Agr_HasPermanentVisa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui visto permanente em  outro país?</label>
    <type>Checkbox</type>
</CustomField>