force-app/main/default/objects/Account/fields/Agr_IsPoliticallyExposed__c.field-meta.xml
<CustomField>
    <fullName>Agr_IsPoliticallyExposed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PEP = Pessoa Politicamente Exposta</inlineHelpText>
    <label>É PEP ?</label>
    <type>Checkbox</type>
</CustomField>