force-app/main/default/objects/Account/fields/Agr_IsRepresentative__c.field-meta.xml
<CustomField>
    <fullName>Agr_IsRepresentative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É representante?</label>
    <type>Checkbox</type>
</CustomField>