force-app/main/default/objects/Account/fields/Agr_LinkWithAgora__c.field-meta.xml
<CustomField>
    <fullName>Agr_LinkWithAgora__c</fullName>
    <label>Tipo de Vínculo com a Ágora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Nenhum Vínculo</fullName>
            </value>
            <value>
                <fullName>1-Administradores, funcionários,</fullName>
            </value>
            <value>
                <fullName>operadores e prepostos da corretora;</fullName>
            </value>
            <value>
                <fullName>2-Agentes autônomos</fullName>
            </value>
            <value>
                <fullName>3-Prestadores de serviços contratados</fullName>
            </value>
            <value>
                <fullName>para atividades fins da corretora</fullName>
            </value>
            <value>
                <fullName>4-Sócios ou acionistas da corretora,</fullName>
            </value>
            <value>
                <fullName>pessoas físicas</fullName>
            </value>
            <value>
                <fullName>5-Cônjuges e filhos menores das</fullName>
            </value>
            <value>
                <fullName>pessoas anteriormente citadas</fullName>
            </value>
            <value>
                <fullName>6-Sócios, acionistas e sociedades</fullName>
            </value>
            <value>
                <fullName>controladas pela corretora, exceto Instituição Financeira</fullName>
            </value>
            <value>
                <fullName>7-Clubes e fundos cuja maioria das</fullName>
            </value>
            <value>
                <fullName>cotas pertença as pessoas citadas acima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>