force-app/main/default/objects/Account/fields/Agr_Patrimonio__c.field-meta.xml
<CustomField>
    <fullName>Agr_Patrimonio__c</fullName>
    <label>Patrimônio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>