force-app/main/default/objects/Account/fields/Agr_PersonMailingComplement__c.field-meta.xml
<CustomField>
    <fullName>Agr_PersonMailingComplement__c</fullName>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>