force-app/main/default/objects/Account/fields/Agr_PersonMailingDistrict__c.field-meta.xml
<CustomField>
    <fullName>Agr_PersonMailingDistrict__c</fullName>
    <label>Bairro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>