force-app/main/default/objects/Account/fields/Agr_PersonMailingNumber__c.field-meta.xml
<CustomField>
    <fullName>Agr_PersonMailingNumber__c</fullName>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>