force-app/main/default/objects/Account/fields/Agr_RegisterStatus__c.field-meta.xml
<CustomField>
    <fullName>Agr_RegisterStatus__c</fullName>
    <label>Status Cadastro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DADOS ACESSO</fullName>
            </value>
            <value>
                <fullName>DADOS PESSOAIS</fullName>
            </value>
            <value>
                <fullName>DADOS FINANCEIROS</fullName>
            </value>
            <value>
                <fullName>DADOS ENDEREÇO</fullName>
            </value>
            <value>
                <fullName>PREENCHIMENTO COMPLETO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>