force-app/main/default/objects/Account/fields/Agr_ResidencialAddressIsMailing__c.field-meta.xml
<CustomField>
    <fullName>Agr_ResidencialAddressIsMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End.resid é o de correnpondência?</label>
    <type>Checkbox</type>
</CustomField>