force-app/main/default/objects/Account/fields/Agr_SpouseCPF__c.field-meta.xml
<CustomField>
    <fullName>Agr_SpouseCPF__c</fullName>
    <label>CPF cônjuge</label>
    <length>14</length>
    <type>Text</type>
</CustomField>