force-app/main/default/objects/Account/fields/Agr_SpouseName__c.field-meta.xml
<CustomField>
    <fullName>Agr_SpouseName__c</fullName>
    <label>Nome do cônjuge</label>
    <length>60</length>
    <type>Text</type>
</CustomField>