force-app/main/default/objects/Account/fields/Agr_StateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>Agr_StateOfBirth__c</fullName>
    <label>Estado de nascimento</label>
    <length>4</length>
    <type>Text</type>
</CustomField>