force-app/main/default/objects/Account/fields/Formula_Venc_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>Formula_Venc_Cadastro__c</fullName>
    <formula>IF(Vencimento_do_Cadastro__c &lt; TODAY(), &quot;Cadastro Vencido&quot;,
IF(Vencimento_do_Cadastro__c  &gt;=  TODAY(), &quot;Cadastro em Situação Regular&quot;, &quot;Cadastro não Preenchido&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Venc. Cadastro</label>
    <type>Text</type>
</CustomField>