force-app/main/default/objects/Account/fields/Vencimento_do_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_do_Cadastro__c</fullName>
    <label>Vencimento do Cadastro</label>
    <type>Date</type>
</CustomField>