force-app/main/default/objects/Account/validationRules/EstadoSP.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoSP</fullName>
    <active>false</active>
    <errorConditionFormula>PersonMailingState &lt;&gt; &quot;SP&quot;</errorConditionFormula>
    <errorMessage>Estado inválido.</errorMessage>
</ValidationRule>