force-app/main/default/objects/Account/validationRules/MailingPostalCodeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>MailingPostalCodeRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  PersonMailingPostalCode  )</errorConditionFormula>
    <errorMessage>CEP é obrigatório</errorMessage>
</ValidationRule>