force-app/main/default/objects/Account/validationRules/MailingStateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>MailingStateRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( PersonMailingState )</errorConditionFormula>
    <errorMessage>Estado é obrigatório</errorMessage>
</ValidationRule>