force-app/main/default/objects/Account/validationRules/MailingStreetRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>MailingStreetRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(PersonMailingStreet)</errorConditionFormula>
    <errorMessage>Nome da rua é obrigatório</errorMessage>
</ValidationRule>